Updated main activity to give option to choose one of the three game modes ( whose code will be uploaded soon ). Added activity to choose difficulty level.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.amanaggarwal1.dothemath.GameActivity"></activity>
-        <activity android:name="com.amanaggarwal1.dothemath.MainActivity">
+        <activity android:name=".DifficultySelectionActivity"></activity>
+        <activity android:name=".GameActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
